<resources>
    <string name="app_name">RegistrationProject</string>
    <string name="content_description">content</string>
    <string name="name_text">Your name</string>
    <string name="surname_text">Your surname</string>
    <string name="date_text">Your birthday date</string>
    <string name="password_text">Your password</string>
    <string name="password_confirmation_text">Confirm password</string>
    <string name="registration_button_text">registration</string>

    <string name="first_name_error">Имя начинается с заглавной буквы!</string>
    <string name="second_name_error">Имя состоит только из букв!</string>
    <string name="third_name_error">В имени только 1 главная буква!</string>
    <string name="first_surname_error">Фамилия начинается с заглавной буквы!</string>
    <string name="second_surname_error">Фамилия состоит только из букв!</string>
    <string name="third_surname_error">В фамилии только 1 главная буква!</string>
    <string name="date_error">Дата должна быть в формате ДД.ММ.ГГГГ!</string>
    <string name="password_error">Пароль должен содержать только цифры и буквы!</string>
    <string name="confirmation_error">Пароли не совпадают!</string>
    <string name="empty_error">Поле не должно быть пустым!</string>
    <string name="length_error">Пароль должен содержать не менее 4-х символов!</string>
    <string name="ok_error_result">окей</string>

    <string name="greeting_button_text">greeting!</string>
    <string name="greeting_text">Приветствую</string>
</resources>